<resources>
    <string name="app_name">Chat room</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_in_to_continue">Login in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">online</string>
    <string name="select_time">select time</string>
    <string name="select_date">select date</string>
    <string name="next">next</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="add_user">add user</string>
    <string name="next_page">Next Page</string>
    <string name="group_chat">Group Chat</string>
    <string name="select_event">Select Event</string>
    <string name="creating_event">Creating event</string>
    <string name="one_to_one_chat">One to One chat</string>
    <string name="view_all_event">View All Event</string>
</resources>